testdata/fixtures/audit/positive/eval_user_input_js_variable.js
function runExpression(userInput) {
  return eval(userInput);
}
