testdata/fixtures/audit/negative/eval_user_input_neg_constant_js.js
function alwaysFour() {
  return eval("2+2");
}
